Fixed cards going over right window border on mobile

--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -44,3 +44,11 @@
 	background-color: rgba(0, 0, 0, 0.8);
 	color: rgba(255, 255, 255, 1);
 }
+
+@media only screen and (max-width: 800px) {
+	.Card {
+		max-width: 150px;
+		width: 150px;
+		min-width: 0px;
+	}	
+} 
